src/tests/test-src/errors/E41-bad-ret-type.syntran
// E41: bad-ret-type
// A function's return value does not match its declared scalar return type

fn f(): i32
{
	return 1.0;
}
